# fastapi-openapi-yaml-template

./: .codex-instructions.md  .copilot-instructions.md  .env.example  .gitignore  Makefile  PR_TEST_CHECKLIST.md  README.md  README_old.md  config.yaml  main.py  main_old.py  pyproject.toml
app/api/: endpoint_registry.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: external.py  health.py  text.py
app/core/: __init__.py  config.py
app/models/: __init__.py
app/services/: external_service.py  health.py  text_service.py
app/services/health/: __init__.py  get_detailed_health_check_impl.py  get_health_check_impl.py
app/services/legacy/: external_service.py  text_service.py
app/services/text/: __init__.py  post_echo_text_impl.py  post_generate_text_impl.py  post_generate_text_legacy_impl.py
app/utils/: openapi.py
docs/: DOCUMENTATION_GUIDE.md  ISSUE_RESOLUTION_SUMMARY.md  PROJECT_STRUCTURE_ANALYSIS.md  PYTHON_CACHE_GUIDE.md  ROUTER_GENERATION_ANALYSIS.md  RUFF_SETUP_GUIDE.md  TROUBLESHOOTING.md  VSCODE_SETUP_GUIDE.md  YAML_FIRST_GUIDE.md  YAML_FIRST_WORKFLOW.md
docs/static/: redoc.html  swagger.html
scripts/: generate_all.py  generate_all.sh  generate_backend.py  generate_backend_code.py  generate_client_types.py  generate_code_only.py  generate_code_only.sh  generate_docs.py  generate_docs.sh  generate_docs_only.py  generate_docs_only.sh  generate_from_yaml.py  generate_frontend.py  generate_frontend_code.py  generate_router.py  generate_types.sh  generate_types_from_yaml.py  generate_yaml_first.py  generate_yaml_first.sh
source/: openapi.yaml
