[tool.poetry]
name = "fastapi_localllm_tutorial"
version = "0.1.0"
description = ""
authors = ["fabrarry <fabrarry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
transformers = "^4.48.2"
pydantic = "^2.10.6"
pydantic-settings = "^2.0.0"
pyyaml = "^6.0"
httpx = "^0.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
